rpm-kustomization/overlay/preprod/namespace.yml
---

apiVersion: v1
kind: Namespace
metadata:
  name: rpm-qualification
  labels:
    name: rpm-qualification
    type: preprod
