rpm-kustomization/overlay/preprod/ingress.yml
---
# Source: rpm-chart/templates/ingress.yaml

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    certmanager.k8s.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - '*.rpm-qualification.decathlon.io'
      secretName: wildcard-decathlon-io
  rules:
    - host: server.rpm-qualification.decathlon.io
      http:
        paths:
          - backend:
              serviceName: server-service
              servicePort: 80
    - host: admin.rpm-qualification.decathlon.io
      http:
        paths:
          - backend:
              serviceName: admin-service
              servicePort: 80
    - host: batch.rpm-qualification.decathlon.io
      http:
        paths:
          - backend:
              serviceName: batch-service
              servicePort: 80
